fix: 🐛 adjust spacing on follow in navigation

--- a/src/components/cms/bnb-cms-navigation/styles.scss
+++ b/src/components/cms/bnb-cms-navigation/styles.scss
@@ -270,10 +270,11 @@
 
 				bnb-button-cta,
 				bnb-follow {
-					margin: 30px 20px;
+					margin: 32px 20px;
 				}
 				bnb-button-cta {
 					margin-right: 0;
+					margin-bottom: 48px;
 				}
 			}
 		}
